--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,9 +21,14 @@ jobs:
     VCPKG_ROOT: $(Build.SourcesDirectory)\vcpkg
   steps:
   - script: |
+      git clone -q --depth 1 git://github.com/Microsoft/vcpkg.git %VCPKG_ROOT%
+      %VCPKG_ROOT%\bootstrap-vcpkg.bat
       if %BuildPlatform%==x64 (set VCVARS_ARCH=x64) else set VCVARS_ARCH=x86
       set VCPKG_ARCH=%VCVARS_ARCH%-windows
       echo ##vso[task.setvariable variable=VcVarsArch]%VCVARS_ARCH%
+      vcpkg install --triplet %VCPKG_ARCH% openssl xerces-c
+      rmdir /s/q %VCPKG_ROOT%\packages %VCPKG_ROOT%\buildtrees
+      echo ##vso[task.setvariable variable=VcPkgInst]%VCPKG_ROOT%\installed\%VCPKG_ARCH%
     displayName: Vcpkg
   - task: BatchScript@1
     displayName: VcVars
@@ -51,12 +56,17 @@ jobs:
         BuildPlatform: Win32
         BuildConfiguration: Release
   variables:
-    VCPKG_ROOT: C:\vcpkg
+    VCPKG_ROOT: $(Build.SourcesDirectory)\vcpkg
   steps:
   - script: |
+      git clone -q --depth 1 git://github.com/Microsoft/vcpkg.git %VCPKG_ROOT%
+      %VCPKG_ROOT%\bootstrap-vcpkg.bat
       if %BuildPlatform%==x64 (set VCVARS_ARCH=x64) else set VCVARS_ARCH=x86
       set VCPKG_ARCH=%VCVARS_ARCH%-windows
       echo ##vso[task.setvariable variable=VcVarsArch]%VCVARS_ARCH%
+      vcpkg install --triplet %VCPKG_ARCH% openssl xerces-c
+      rmdir /s/q %VCPKG_ROOT%\packages %VCPKG_ROOT%\buildtrees
+      echo ##vso[task.setvariable variable=VcPkgInst]%VCPKG_ROOT%\installed\%VCPKG_ARCH%
     displayName: Vcpkg
   - task: BatchScript@1
     displayName: VcVars
