--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,21 +8,41 @@ jobs:
       Debug64:
         BuildPlatform: x64
         BuildConfiguration: Debug
-      Release64:
-        BuildPlatform: x64
-        BuildConfiguration: Release
-      Debug32:
-        BuildPlatform: Win32
-        BuildConfiguration: Debug
-      Release32:
-        BuildPlatform: Win32
-        BuildConfiguration: Release
   variables:
     VCPKG_ROOT: $(Build.SourcesDirectory)\vcpkg
   steps:
   - script: |
       git clone -q --depth 1 git://github.com/Microsoft/vcpkg.git %VCPKG_ROOT%
       %VCPKG_ROOT%\bootstrap-vcpkg.bat
+      if %BuildPlatform%==x64 (set VCVARS_ARCH=x64) else set VCVARS_ARCH=x86
+      set VCPKG_ARCH=%VCVARS_ARCH%-windows
+      echo ##vso[task.setvariable variable=VcVarsArch]%VCVARS_ARCH%
+      echo ##vso[task.setvariable variable=VcPkgInst]%VCPKG_ROOT%\installed\%VCPKG_ARCH%
+    displayName: Vcpkg
+  - task: BatchScript@1
+    displayName: VcVars
+    inputs:
+      filename: '"C:\Program Files (x86)\Microsoft Visual Studio\2019\Preview\VC\Auxiliary\Build\vcvarsall.bat"'
+      arguments: $(VcVarsArch)
+      modifyEnvironment: true
+
+- job: VisualStudio2019TwoStep
+  timeoutInMinutes: 90
+  pool:
+    vmImage: windows-2019
+  strategy:
+    matrix:
+      Debug64:
+        BuildPlatform: x64
+        BuildConfiguration: Debug
+  variables:
+    VCPKG_ROOT: $(Build.SourcesDirectory)\vcpkg
+  steps:
+  - script: |
+      git clone -q --depth 1 git://github.com/Microsoft/vcpkg.git %VCPKG_ROOT%
+      %VCPKG_ROOT%\bootstrap-vcpkg.bat
+    displayName: Bootstrap vcpkg
+  - script: |
       if %BuildPlatform%==x64 (set VCVARS_ARCH=x64) else set VCVARS_ARCH=x86
       set VCPKG_ARCH=%VCVARS_ARCH%-windows
       echo ##vso[task.setvariable variable=VcVarsArch]%VCVARS_ARCH%
@@ -44,15 +64,6 @@ jobs:
       Debug64:
         BuildPlatform: x64
         BuildConfiguration: Debug
-      Release64:
-        BuildPlatform: x64
-        BuildConfiguration: Release
-      Debug32:
-        BuildPlatform: Win32
-        BuildConfiguration: Debug
-      Release32:
-        BuildPlatform: Win32
-        BuildConfiguration: Release
   variables:
     VCPKG_ROOT: $(Build.SourcesDirectory)\vcpkg
   steps:
