--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ jobs:
   steps:
   - script: |
       perl -V
-      C:\Strawberry\c\bin\perl -V
+      C:\Strawberry\bin\perl -V
     displayName: Vcpkg
 
 - job: VisualStudio2017
@@ -30,5 +30,5 @@ jobs:
   steps:
   - script: |
       perl -V
-      C:\Strawberry\c\bin\perl -V
+      C:\Strawberry\bin\perl -V
     displayName: Vcpkg
